Product card without slider & quantity btn + AboutUs page

--- a/catalog/view/theme/plangui/template/common/header.twig
+++ b/catalog/view/theme/plangui/template/common/header.twig
@@ -63,7 +63,7 @@
               </ul>
 					  </li>
             <li><a href="/about/">Парф. свечи</a></li>
-            <li><a href="/about/">Автор-парфюмер</a></li>
+            <li><a href="/about_us">Автор-парфюмер</a></li>
             <li><a href="/contact/">События</a></li>
         </ul>
       </nav>
@@ -107,7 +107,7 @@
 							</ul>
 						</li>
 						<li class="menu-item"><a href="#">Парф. свечи</a></li>
-						<li class="menu-item"><a href="#">Автор-парфюмер</a></li>
+						<li class="menu-item"><a href="/about_us">Автор-парфюмер</a></li>
 						<li class="menu-item"><a href="#">События</a></li>
 					</ul>	
 					<a href="#my-menu" class="menu-link">
