--- a/app/styles/sass/blocks/about.sass
+++ b/app/styles/sass/blocks/about.sass
@@ -4,4 +4,14 @@
             display: block
             margin: auto
             margin-bottom: 30px
+
+.paragraph-text
+    font-size: 16px
+    line-height: 19px
+
+.paragraph-text h2
+    margin-bottom: 2rem
+
+.paragraph-text p
+    margin-bottom: 2rem
             
