--- a/app/styles/sass/blocks/catalog.sass
+++ b/app/styles/sass/blocks/catalog.sass
@@ -1,30 +1,48 @@
 .product-card
+    position: relative
     text-align: center
     border-bottom: 1px solid #ABABAB
     width: 320px
     margin-bottom: 60px
     transition: all .3s ease
+    transition-delay: .4s
+    .image
+        display: flex
+        justify-content: center
     img
         margin-bottom: 30px
     p
         color: #343434
-        margin: 0
+        margin: 15px 0
+        transition: opacity .6s ease
+        transition-delay: .4s
     h2
-        font-size: 25px
-        margin-bottom: 10px
-        font-weight: 300
-    a
+        a
+            font-size: 25px
+            margin-bottom: 10px
+            font-weight: 300
+            color: #000
+            text-decoration: none
+            margin-bottom: 15px
+    &-more
+        position: absolute
+        left: 50%
+        transform: translateX(-50%)
+        bottom: 30px
         opacity: 0
         margin: auto
         margin-top: 15px
         transition: opacity .6s ease
+        transition-delay: .5s
     &:hover
-         border-bottom: 1px solid #fff
-         a
-             opacity: 1
+        border-bottom: 1px solid #fff
+        .product-card-more
+            opacity: 1
+        p
+            opacity: 0
     @include media-breakpoint-down(md)
         margin-bottom: 40px
-        a
+        .product-card-more
             opacity: 1
             margin-bottom: 30px
         &:hover
