--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -72,6 +72,7 @@
 .center-image
     text-align: center
     margin-bottom: 40px
+    margin-top: 40px
 
 .page-title
     margin: 60px 0 50px 0
@@ -86,3 +87,10 @@
         font-weight: 500
     img
         margin-bottom: 30px
+
+h1
+    margin-top: 60px
+    margin-bottom: 50px
+    text-transform: uppercase
+    text-align: center
+    font-size: 35px
