--- a/catalog/view/javascript/jquery/swiper/css/opencart.css
+++ b/catalog/view/javascript/jquery/swiper/css/opencart.css
@@ -1,11 +1,10 @@
 /* CSS Document */
 .swiper-viewport {
-	margin: 0 0 60px;
+	margin: 40px 0 100px;
 	background: #fff;
 	z-index: 1;
-	border: 4px solid #fff;
+	border: none;
 	border-radius: 4px;
-	box-shadow: 0 1px 4px rgba(0,0,0,.2);
 	width: 100%;
 	position: relative;
 	overflow: visible;
@@ -56,21 +55,34 @@
 	right: 10px;
 }
 }
-.swiper-button-prev:before {
-	width: 40px;
+
+.swiper-button-next, .swiper-button-prev {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #8E2216;
+    width: 40px;
     height: 40px;
-	font-family: FontAwesome;
-	content: "\f053"; 
-	color: rgba(0,0,0,0.8);
-	font-size: 40px;
+    border-radius: 4px;
+}
+
+.swiper-button-prev:before {
+    width: 18px;
+    height: 20px;
+    font-family: FontAwesome;
+    content: "\f053";
+    color: #fff;
+    font-size: 20px;
+    line-height: 20px;
 }
 .swiper-button-next:before {
-	width: 40px;
-    height: 40px;
-	font-family: FontAwesome;
-	content: "\f054"; 
-	color: rgba(0,0,0,0.8);
-	font-size: 40px;
+    width: 12px;
+    height: 20px;
+    font-family: FontAwesome;
+    content: "\f054";
+    color: #fff;
+    font-size: 20px;
+    line-height: 20px;
 }
 .swiper-pagination {
 	bottom: -40px;
