--- a/catalog/view/theme/plangui/template/blog/category.twig
+++ b/catalog/view/theme/plangui/template/blog/category.twig
@@ -1,4 +1,4 @@
-{{ header }}
+<!-- {{ header }}
 <div class="container">
   <ul class="breadcrumb">
     {% for breadcrumb in breadcrumbs %}
@@ -101,4 +101,4 @@
       {{ content_bottom }}</div>
     {{ column_right }}</div>
 </div>
-{{ footer }}
+{{ footer }} -->
