--- a/catalog/view/theme/plangui/template/blog/category.twig
+++ b/catalog/view/theme/plangui/template/blog/category.twig
@@ -1,4 +1,4 @@
-<!-- {{ header }}
+{{ header }}
 <div class="container">
   <ul class="breadcrumb">
     {% for breadcrumb in breadcrumbs %}
@@ -15,7 +15,7 @@
     {% endif %}
     <div id="content" class="{{ class }} showcase-list">{{ content_top }}
       <h1>{{ heading_title }}</h1>
-	   {% if thumb or description %}
+	   <!-- {% if thumb or description %}
       <div class="row">
         {% if thumb %}
         <div class="col-sm-2"><img src="{{ thumb }}" alt="{{ heading_title }}" title="{{ heading_title }}" class="img-thumbnail" /></div>
@@ -25,8 +25,8 @@
 		{% endif %}
       </div>
       <hr>
-	  {% endif %}
-      {% if articles %}
+	  {% endif %} -->
+      <!-- {% if articles %}
       <div class="row">
         <div class="col-sm-3">
           <div class="btn-group">
@@ -62,32 +62,24 @@
               {% endfor %}
             </select>
         </div>
-      </div>
+      </div> -->
       <br />
       <div class="row">  
         {% for article in articles %} 
-        <div class="product-layout product-list col-xs-12">
-          <div class="product-thumb">
-            <div class="image"><a href="{{ article.href }}"><img src="{{ article.thumb }}" alt="{{ article.name }}" title="{{ article.name }}" class="img-responsive" /></a></div>
-            <div class="caption">
-              <h4><a href="{{ article.href }}">{{ article.name }}</a></h4>
-              <p class="description">{{ article['description'] }}</p>
-              {% if configblog_review_status %}
-              {% if article.rating %}
-                <div class="rating"> {% for i in 1..5 %}
-                  {% if article.rating < i %} <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span> {% else %} <span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>{% endif %}
-                  {% endfor %} </div>
-                {% endif %}
-			  {% endif %}
-            </div>
-            <div class="button-group">
-				<button type="button" onclick="location.href = ('{{ article.href }}');"><i class="fa fa-share"></i> <span class="hidden-xs hidden-sm hidden-md">{{ button_more }}</span></button>
-				<button type="button" data-toggle="tooltip" title="{{ article.date_added }}" "><i class="fa fa-clock-o"></i></button>
-				<button type="button" data-toggle="tooltip" title="{{ text_views }} {{ article.viewed }}" "><i class="fa fa-eye"></i></button>
-			</div>
+        <div class="event-card">
+          <div class="col-lg-5">
+              <a href="{{ article.href }}" class="event-image" style="background-image: url('{{ article.thumb }}');"></a>
+          </div>
+          <div class="col-lg-7">
+              <div class="card card_slayne">
+                  <h2><a href="{{ article.href }}">{{ article.name }}</a></h2>
+                  <p>{{ article['description'] }}
+                  </p>
+                  <a href="{{ article.href }}" class="btn btn_normal">Подробнее</a>
+              </div>
           </div>
         </div>
-       {% endfor %}
+        {% endfor %}
       </div>
       <div class="row">
         <div class="col-sm-6 text-left">{{ pagination }}</div>
@@ -101,4 +93,4 @@
       {{ content_bottom }}</div>
     {{ column_right }}</div>
 </div>
-{{ footer }} -->
+{{ footer }}
