--- a/catalog/view/theme/plangui/template/common/footer.twig
+++ b/catalog/view/theme/plangui/template/common/footer.twig
@@ -4,13 +4,13 @@
       <div class="col-lg-4 d-flex justify-content-center justify-content-lg-start">
         <ul class="footer-menu">
           <li>
-            <a href="#">Контакты</a>
+            <a href="/kontakty">Контакты</a>
           </li>
           <li>
-            <a href="#">Доставка и оплата</a>
+            <a href="/dostavka">Доставка и оплата</a>
           </li>
           <li>
-            <a href="#">Политика конфиденциальности</a>
+            <a href="/privacy">Политика конфиденциальности</a>
           </li>
         </ul>
       </div>
