--- a/catalog/view/theme/plangui/template/common/header.twig
+++ b/catalog/view/theme/plangui/template/common/header.twig
@@ -91,14 +91,14 @@
 				<div class="container">
 					<ul class="menu-list">
 						<li class="menu-item">
-							<a href="#">Коллекция ароматов</a>
+							<a href="/kolekciya-aromatov">Коллекция ароматов</a>
 							<ul class="dropdown">
 								<li><a href="#">Натуральные ароматы</a></li>
 							</ul>
 						</li>
 						<li class="menu-item"><a href="#">Парф. свечи</a></li>
 						<li class="menu-item"><a href="/about_us">Автор-парфюмер</a></li>
-						<li class="menu-item"><a href="#">События</a></li>
+						<li class="menu-item"><a href="/sobytiya">События</a></li>
 					</ul>	
 					<a href="#my-menu" class="menu-link">
 						<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon">
