added added several products + minor style edits

--- a/app/styles/sass/blocks/product-card.sass
+++ b/app/styles/sass/blocks/product-card.sass
@@ -41,10 +41,11 @@
         text-align: left
         text-transform: none
     p
-        margin-bottom: 20px
+        margin-bottom: 5px
 
 .value-block
     display: flex
+    margin: 20px 0
 
 .options
     margin-left: 35px
