Fix option in product card + setup module Live option price

--- a/app/styles/sass/blocks/product-card.sass
+++ b/app/styles/sass/blocks/product-card.sass
@@ -79,11 +79,12 @@
 .options .form-group .control-label 
     display: none
 
-.options .form-group select 
-    width: 115px
+.options select.form-control 
+    width: 140px
     height: 40px
     border: 1px solid #ababab
     font-size: 12px
+    border-radius: inherit
 
 .select-block
     position: relative
