--- a/catalog/view/theme/plangui/template/common/header.twig
+++ b/catalog/view/theme/plangui/template/common/header.twig
@@ -57,11 +57,7 @@
 		<div id="my-header">
 			<nav id="my-menu">
         <ul>
-            <li><a href="/kolekciya-aromatov">Коллекция ароматов</a>
-				<!-- <ul>
-                	<li><a href="/about/history/">Натуральные ароматы</a></li>
-             	</ul> -->
-			</li>
+            <li><a href="/kolekciya-aromatov">Коллекция ароматов</a></li>
             <li><a href="/parfyumernye-svechi">Парф. свечи</a></li>
             <li><a href="/about_us">Автор-парфюмер</a></li>
             <li><a href="/sobytiya">События</a></li>
@@ -90,12 +86,7 @@
 			<div class="menu">
 				<div class="container">
 					<ul class="menu-list">
-						<li class="menu-item">
-							<a href="/kolekciya-aromatov">Коллекция ароматов</a>
-							<!-- <ul class="dropdown">
-								<li><a href="#">Натуральные ароматы</a></li>
-							</ul> -->
-						</li>
+						<li class="menu-item"><a href="/kolekciya-aromatov">Коллекция ароматов</a></li>
 						<li class="menu-item"><a href="/parfyumernye-svechi">Парф. свечи</a></li>
 						<li class="menu-item"><a href="/about_us">Автор-парфюмер</a></li>
 						<li class="menu-item"><a href="/sobytiya">События</a></li>
