--- a/catalog/view/theme/plangui/template/product/product.twig
+++ b/catalog/view/theme/plangui/template/product/product.twig
@@ -33,37 +33,155 @@
                   <p>
                     {{ description }}
                   </p>
-                  <div class="value-block">
-                      <div class="amount">
-                          <span class="small-title">{{ entry_qty }}</span>
-                          <div class="amount_block">
-                              <span class="amount_ctrl" id="minus">-</span>
-                              <input type="text" name="quantity" value="1" size="2" id="input-quantity" class="form-control amount_input">
-                              <input type="hidden" name="product_id" value="75">   
-                              <span class="amount_ctrl" id="plus">+</span>
-                          </div>
-                      </div>
+                  
+				 
+				  <div id="product" class="value-block"> {% if options %}
 
-                      <div class="options">
-                          <span class="small-title small-title_left">Объем</span>
-                          {% for option in options %}
-                          {% if option.type == 'select' %}
-                          <div class="form-group{% if option.required %} required {% endif %}">
-                            <label class="control-label" for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
-                              <select name="option[{{ option.product_option_id }}]" id="input-option{{ option.product_option_id }}">
-                              <option value="">{{ text_select }}</option>
-                              {% for option_value in option.product_option_value %}
-                              <option value="{{ option_value.product_option_value_id }}">{{ option_value.name }}
-                              {% if option_value.price %}
-                              ({{ option_value.price_prefix }}{{ option_value.price }})
-                              {% endif %} </option>
-                              {% endfor %}
-                          </select>
-                        </div>
-                          {% endif %}
-                          {% endfor %}                        
-                      </div>
-                  </div> 
+					<div class="form-group amount">
+						<span class="small-title">{{ entry_qty }}</span>
+						<div class="amount_block">
+							<span class="amount_ctrl" id="minus">-</span>
+							<input type="text" name="quantity" value="{{ minimum }}" size="2" id="input-quantity" class="form-control amount_input" />
+							<input type="hidden" name="product_id" value="{{ product_id }}" /> 
+							<span class="amount_ctrl" id="plus">+</span>
+						</div>
+						{% if minimum > 1 %}
+						<div class="alert alert-info"><i class="fa fa-info-circle"></i> {{ text_minimum }}</div>
+						{% endif %}
+					</div>
+
+				  	{% for option in options %}
+				  	{% if option.type == 'select' %}
+				  	<div class=" options form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label small-title small-title_left" for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
+				  		<select name="option[{{ option.product_option_id }}]" id="input-option{{ option.product_option_id }}" class="form-control">
+				  			<option value="">{{ text_select }}</option>
+				  			{% for option_value in option.product_option_value %}
+				  			<option value="{{ option_value.product_option_value_id }}">{{ option_value.name }}
+				  				{% if option_value.price %}
+				  				({{ option_value.price_prefix }}{{ option_value.price }})
+				  				{% endif %} </option>
+				  			{% endfor %}
+				  		</select>
+				  	</div>
+				  	{% endif %}
+				  	{% if option.type == 'radio' %}
+				  	<div class="form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label">{{ option.name }}</label>
+				  		<div id="input-option{{ option.product_option_id }}">
+				  			{% for option_value in option.product_option_value %}
+				  			<div class="radio">
+				  				<label>
+				  					<input type="radio" name="option[{{ option.product_option_id }}]"
+				  						value="{{ option_value.product_option_value_id }}" />
+				  					{% if option_value.image %} <img src="{{ option_value.image }}"
+				  						alt="{{ option_value.name }} {% if option_value.price %} {{ option_value.price_prefix }} {{ option_value.price }} {% endif %}"
+				  						class="img-thumbnail" /> {% endif %}
+				  					{{ option_value.name }}
+				  					{% if option_value.price %}
+				  					({{ option_value.price_prefix }}{{ option_value.price }})
+				  					{% endif %} </label>
+				  			</div>
+				  			{% endfor %} </div>
+				  	</div>
+				  	{% endif %}
+				  	{% if option.type == 'checkbox' %}
+				  	<div class="form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label">{{ option.name }}</label>
+				  		<div id="input-option{{ option.product_option_id }}">
+				  			{% for option_value in option.product_option_value %}
+				  			<div class="checkbox">
+				  				<label>
+				  					<input type="checkbox" name="option[{{ option.product_option_id }}][]"
+				  						value="{{ option_value.product_option_value_id }}" />
+				  					{% if option_value.image %} <img src="{{ option_value.image }}"
+				  						alt="{{ option_value.name }} {% if option_value.price %} {{ option_value.price_prefix }} {{ option_value.price }} {% endif %}"
+				  						class="img-thumbnail" /> {% endif %}
+				  					{{ option_value.name }}
+				  					{% if option_value.price %}
+				  					({{ option_value.price_prefix }}{{ option_value.price }})
+				  					{% endif %} </label>
+				  			</div>
+				  			{% endfor %} </div>
+				  	</div>
+				  	{% endif %}
+				  	{% if option.type == 'text' %}
+				  	<div class="form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label" for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
+				  		<input type="text" name="option[{{ option.product_option_id }}]" value="{{ option.value }}"
+				  			placeholder="{{ option.name }}" id="input-option{{ option.product_option_id }}"
+				  			class="form-control" />
+				  	</div>
+				  	{% endif %}
+				  	{% if option.type == 'textarea' %}
+				  	<div class="form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label" for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
+				  		<textarea name="option[{{ option.product_option_id }}]" rows="5" placeholder="{{ option.name }}"
+				  			id="input-option{{ option.product_option_id }}" class="form-control">{{ option.value }}</textarea>
+				  	</div>
+				  	{% endif %}
+				  	{% if option.type == 'file' %}
+				  	<div class="form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label">{{ option.name }}</label>
+				  		<button type="button" id="button-upload{{ option.product_option_id }}"
+				  			data-loading-text="{{ text_loading }}" class="btn btn-default btn-block"><i class="fa fa-upload"></i>
+				  			{{ button_upload }}</button>
+				  		<input type="hidden" name="option[{{ option.product_option_id }}]" value=""
+				  			id="input-option{{ option.product_option_id }}" />
+				  	</div>
+				  	{% endif %}
+				  	{% if option.type == 'date' %}
+				  	<div class="form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label" for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
+				  		<div class="input-group date">
+				  			<input type="text" name="option[{{ option.product_option_id }}]" value="{{ option.value }}"
+				  				data-date-format="YYYY-MM-DD" id="input-option{{ option.product_option_id }}"
+				  				class="form-control" />
+				  			<span class="input-group-btn">
+				  				<button class="btn btn-default" type="button"><i class="fa fa-calendar"></i></button>
+				  			</span></div>
+				  	</div>
+				  	{% endif %}
+				  	{% if option.type == 'datetime' %}
+				  	<div class="form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label" for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
+				  		<div class="input-group datetime">
+				  			<input type="text" name="option[{{ option.product_option_id }}]" value="{{ option.value }}"
+				  				data-date-format="YYYY-MM-DD HH:mm" id="input-option{{ option.product_option_id }}"
+				  				class="form-control" />
+				  			<span class="input-group-btn">
+				  				<button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+				  			</span></div>
+				  	</div>
+				  	{% endif %}
+				  	{% if option.type == 'time' %}
+				  	<div class="form-group{% if option.required %} required {% endif %}">
+				  		<label class="control-label" for="input-option{{ option.product_option_id }}">{{ option.name }}</label>
+				  		<div class="input-group time">
+				  			<input type="text" name="option[{{ option.product_option_id }}]" value="{{ option.value }}"
+				  				data-date-format="HH:mm" id="input-option{{ option.product_option_id }}" class="form-control" />
+				  			<span class="input-group-btn">
+				  				<button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+				  			</span></div>
+				  	</div>
+				  	{% endif %}
+				  	{% endfor %}
+				  	{% endif %}
+
+				  	{% if recurrings %}
+				  	<hr>
+				  	<h3>{{ text_payment_recurring }}</h3>
+				  	<div class="form-group required">
+				  		<select name="recurring_id" class="form-control">
+				  			<option value="">{{ text_select }}</option>
+				  			{% for recurring in recurrings %}
+				  			<option value="{{ recurring.recurring_id }}">{{ recurring.name }}</option>
+				  			{% endfor %}
+				  		</select>
+				  		<div class="help-block" id="recurring-description"></div>
+				  	</div>
+				  	{% endif %}
+				  </div>
                   {% if price %}
                   <ul class="list-unstyled price__ul">
                     {% if not special %}
@@ -101,7 +219,6 @@
       </div>
   </div>  
 </div>
-
 
 
 <script type="text/javascript"><!--
