the layout for the slider is made. error in the console

--- a/catalog/view/theme/plangui/template/product/product.twig
+++ b/catalog/view/theme/plangui/template/product/product.twig
@@ -11,21 +11,39 @@
       <div class="row">
           <div class="col-lg-4 offset-lg-1"> 
             {% if thumb or images %}
-              <div class="product-carousel-for">
-                {% if thumb %}
-                  <div class="product-carousel-for_item">
-                      <img src="{{ thumb }}" alt="{{ heading_title }}">
-                  </div>
-                  {% endif %}
-                  {% if images %}
-                  {% for image in images %}
-                  <div class="product-carousel-for_item">
-                      <img src="{{ image.thumb }}" alt="">
-                  </div>
-                  {% endfor %}
-                {% endif %}
-                </div>
-            {% endif %}
+
+				<div class="product-carousel-for">
+					{% if thumb %}
+					<div class="product-carousel-for_item">
+						<img src="{{ thumb }}" alt="{{ heading_title }}">
+					</div>
+					{% endif %}
+					{% if images %}
+					{% for image in images %}
+					<div class="product-carousel-for_item">
+						<img src="{{ image.thumb }}" alt="">
+					</div>
+					{% endfor %}
+					{% endif %}
+				</div>
+
+				<div class="product-carousel-nav">
+					{% if thumb %}
+					<div class="product-carousel-for_item">
+						<img src="{{ thumb }}" alt="{{ heading_title }}">
+					</div>
+					{% endif %}
+					{% if images %}
+					{% for image in images %}
+					<div class="product-carousel-for_item">
+						<img src="{{ image.thumb }}" alt="">
+					</div>
+					{% endfor %}
+					{% endif %}
+				</div>
+
+			{% endif %}
+
           </div>
           <div class="col-lg-7">
               <div class="product-card-content">
