--- a/catalog/view/theme/plangui/template/common/header.twig
+++ b/catalog/view/theme/plangui/template/common/header.twig
@@ -77,7 +77,7 @@
 							</div>
 						</div>
 						<div class="col-lg-3 col-12 d-flex justify-content-lg-end justify-content-center">
-							{{ cart }}
+							<div class="col-sm-3"></div>{{ cart }}</div>
 						</div>
 					</div>
 				</div>
@@ -86,7 +86,8 @@
 			<div class="menu">
 				<div class="container">
 					<ul class="menu-list">
-						<li class="menu-item"><a href="/kolekciya-aromatov">Коллекция ароматов</a></li>
+						<li class="menu-item">
+							<a href="/kolekciya-aromatov">Коллекция ароматов</a></li>
 						<li class="menu-item"><a href="/parfyumernye-svechi">Парф. свечи</a></li>
 						<li class="menu-item"><a href="/about_us">Автор-парфюмер</a></li>
 						<li class="menu-item"><a href="/sobytiya">События</a></li>
