--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -23,8 +23,8 @@ $gutter: $grid-gutter-width
 @import 'node_modules/bootstrap/scss/bootstrap-grid.scss' // Optional Bootstrap Grid
 // @import 'node_modules/bootstrap/scss/utilities/_sizing.scss' // Optional Bootstrap Utilites
 @import 'node_modules/mmenu-js/dist/mmenu'
-@import 'node_modules/slick-carousel/slick/slick.scss'
-@import 'node_modules/slick-carousel/slick/slick-theme.scss'
+// import Swiper styles
+@import 'node_modules/swiper/swiper-bundle';
 
 
 // FONTS LOAD SECTION
@@ -54,6 +54,12 @@ input, textarea
 		border-color: red
 	&:required:valid
 		border-color: green
+
+button:active, button:focus 
+	outline: none !important
+
+button::-moz-focus-inner 
+	border: 0 !important
 
 body
 	font-family: $userfont
