--- a/app/styles/sass/blocks/product-card.sass
+++ b/app/styles/sass/blocks/product-card.sass
@@ -124,3 +124,70 @@
         margin: 5px 0
         display: block
 
+.swiper-slider
+    position: relative
+    
+.swiper-container 
+    width: 100%
+    
+.swiper-slide 
+    text-align: center
+    font-size: 18px
+    background: #fff
+    /* Center slide text vertically */
+    display: -webkit-box
+    display: -ms-flexbox
+    display: -webkit-flex
+    display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
+    -webkit-justify-content: center
+    justify-content: center
+    -webkit-box-align: center
+    -ms-flex-align: center
+    -webkit-align-items: center
+    align-items: center
+    
+
+.swiper-slide img 
+    display: block
+    width: 100%
+    object-fit: cover
+    
+
+.swiper-container 
+    width: 100%
+    margin-left: auto
+    margin-right: auto
+    
+
+.swiper-slide 
+    background-size: cover
+    background-position: center
+    
+
+.mySwiper2 
+    width: 100%
+    
+
+.mySwiper 
+    height: fit-content
+    box-sizing: border-box
+    padding: 10px 0
+    
+
+.mySwiper .swiper-slide 
+    width: 30%
+    opacity: 0.6
+    
+
+.mySwiper .swiper-slide-thumb-active 
+    opacity: 1
+    
+
+.swiper-slide img 
+    display: block
+    width: 100%
+    max-width: 350px
+    object-fit: cover
+    
