finished translating the header & footer menu

--- a/catalog/view/theme/plangui/template/common/footer.twig
+++ b/catalog/view/theme/plangui/template/common/footer.twig
@@ -4,13 +4,13 @@
       <div class="col-lg-4 d-flex justify-content-center justify-content-lg-start">
         <ul class="footer-menu">
           <li>
-            <a href="/kontakty">Контакты</a>
+            <a href="/kontakty">{{ text_menu_contacts }}</a>
           </li>
           <li>
-            <a href="/dostavka">Доставка и оплата</a>
+            <a href="/dostavka">{{ text_menu_delivery }}</a>
           </li>
           <li>
-            <a href="/privacy">Политика конфиденциальности</a>
+            <a href="/privacy">{{ text_menu_privacy }}</a>
           </li>
         </ul>
       </div>
