--- a/catalog/view/theme/plangui/template/common/header.twig
+++ b/catalog/view/theme/plangui/template/common/header.twig
@@ -57,10 +57,10 @@
 		<div id="my-header">
 			<nav id="my-menu" style="display: none">
         <ul>
-            <li><a href="/kolekciya-aromatov">Коллекция ароматов</a></li>
-            <li><a href="/parfyumernye-svechi">Парф. свечи</a></li>
-            <li><a href="/about_us">Автор-парфюмер</a></li>
-            <li><a href="/sobytiya">События</a></li>
+            <li><a href="/kolekciya-aromatov">{{ text_menu_item1 }}</a></li>
+            <li><a href="/parfyumernye-svechi">{{ text_menu_item2 }}</a></li>
+            <li><a href="/about_us">{{ text_menu_item3 }}</a></li>
+            <li><a href="/sobytiya">{{ text_menu_item4 }}</a></li>
         </ul>
       </nav>
 			<header>
@@ -87,10 +87,10 @@
 				<div class="container">
 					<ul class="menu-list">
 						<li class="menu-item">
-							<a href="/kolekciya-aromatov">Коллекция ароматов</a></li>
-						<li class="menu-item"><a href="/parfyumernye-svechi">Парф. свечи</a></li>
-						<li class="menu-item"><a href="/about_us">Автор-парфюмер</a></li>
-						<li class="menu-item"><a href="/sobytiya">События</a></li>
+							<a href="/kolekciya-aromatov">{{ text_menu_item1 }}</a></li>
+						<li class="menu-item"><a href="/parfyumernye-svechi">{{ text_menu_item2 }}</a></li>
+						<li class="menu-item"><a href="/about_us">{{ text_menu_item3 }}</a></li>
+						<li class="menu-item"><a href="/sobytiya">{{ text_menu_item4 }}</a></li>
 					</ul>	
 					<a href="#my-menu" class="menu-link">
 						<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon">
