until the final edits

--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -25,6 +25,7 @@ $gutter: $grid-gutter-width
 @import 'node_modules/mmenu-js/dist/mmenu'
 // import Swiper styles
 @import 'node_modules/swiper/swiper-bundle';
+@import 'node_modules/swiper/components/thumbs/thumbs.min';
 
 
 // FONTS LOAD SECTION
