--- a/app/styles/sass/blocks/product-card.sass
+++ b/app/styles/sass/blocks/product-card.sass
@@ -190,4 +190,10 @@
     width: 100%
     max-width: 350px
     object-fit: cover
+
+.swiper-slide-home img
+    max-width: none
+
+.swiper-pager .swiper-button-next:after, .swiper-pager .swiper-button-prev:after
+    display: none
     
