minor edits finished

--- a/app/styles/sass/blocks/checkout.sass
+++ b/app/styles/sass/blocks/checkout.sass
@@ -32,6 +32,24 @@
     background-color: #ffffff
     border-color: rgba(142,34,22,.36)
 
+button.btn.btn-danger 
+    border: 1px solid #8e2216
+
+button.btn.btn-danger:hover 
+    background: none
+    background-color: white
+    box-shadow: 0px 0 3px 2px rgba(0, 0, 0, .15)
+
+a.btn.btn-primary 
+    border: 1px solid #8e2216
+    color: #8e2216
+    background-color: #fff
+
+a.btn.btn-primary:hover
+    background-color: #fff
+    border: 1px solid #8e2216
+    color: #000
+
 @media screen and (max-width: 767px)
     .table-responsive
         border: 1px solid rgba(142,34,22,.36)
