--- a/app/styles/sass/blocks/product-card.sass
+++ b/app/styles/sass/blocks/product-card.sass
@@ -197,3 +197,39 @@
 .swiper-pager .swiper-button-next:after, .swiper-pager .swiper-button-prev:after
     display: none
     
+.btn-add
+    margin-right: 20px
+    margin-bottom: 20px
+    vertical-align: top
+
+#button-cart
+    display: inline-block
+
+.alert-success 
+    display: inline-block
+    color: #000000
+    background-color: #ffffff47
+    border-color: #d0d0d0
+    box-shadow: 4px 4px 20px 8px rgba(103, 103, 103, 0.1)
+    text-align: center
+    font-size: 12px
+    padding: 14px
+    a
+        color: #000
+
+button.close
+    display: block
+    border-radius: 50px
+    border: 1px solid #8e2216
+    font-size: 11px
+    font-weight: 400
+    text-align: center
+    margin: 0 auto
+    padding: 8px
+    margin-top: 10px
+
+.alert-dismissible .close
+    float: inherit
+    opacity: 1
+    top: 0
+    right: 0
