--- a/catalog/view/theme/plangui/template/product/category.twig
+++ b/catalog/view/theme/plangui/template/product/category.twig
@@ -132,7 +132,7 @@
             <div class="image"><a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-responsive" /></a></div>
             <h2><a href="{{ product.href }}">{{ product.name }}</a></h2>
               <p>{{ product.description }}</p>
-              <a href="{{ product.href }}" class="product-card-more btn btn_accent">Подробнее</a>
+              <a href="{{ product.href }}" class="product-card-more btn btn_accent">Купить</a>
           </div>
         </div>
         {% endfor %} </div>
